
 ** nakalike (similar functionality to MATLAB's negloglik and mlecov)

 ** nbinfit (similar functionality to MATLAB's mle)

 ** nbinlike (similar functionality to MATLAB's negloglik and mlecov)

 ** mad (fully Matlab compatible)

 ** normfit (fully Matlab compatible)

 ** poissfit (fully Matlab compatible, extra functionality)

 ** poisslike (similar functionality to MATLAB's negloglik)

 ** vminv (quantile function for the von Mises distribution)

 ** wblfit (fully Matlab compatible)

 ** wbllike (fully Matlab compatible)

 Improvements:
 =============

 ** bisacdf: supports "upper" option

 ** burrcdf: supports "upper" option

 ** cauchycdf: supports "upper" option

 ** cdf: update support for all univariate cumulative distribution functions

 ** gamfit: fixed MATLAB compatibility

 ** gamlike: fixed MATLAB compatibility

 ** icdf: update support for all univariate quantile functions

 ** laplacecdf: supports "upper" option

 ** logicdf: supports "upper" option

 ** mcnemar_test: updated functionality

 ** nakacdf: supports "upper" option

 ** pcacov: fixed MATLAB compatibility

 ** pdf: update support for all univariate probability density functions

 ** plsregress: fixed MATLAB compatibility

 ** random: update support for all univariate functions

 ** runstest: fixed MATLAB compatibility

 ** tabulate: fixed MATLAB compatibility

 ** tricdf: supports "upper" option

 ** trimmean: fixed MATLAB compatibility

 Removed Functions:
 ==================

 ** run_test (replaced by runstest)

 ** stdnormal_cdf (replaced by normcdf)

 ** stdnormal_inv (replaced by norminv)

 ** stdnormal_pdf (replaced by normpdf)

 ** stdnormal_rnd (replaced by normrnd)

 Renamed Functions:
 ==================

 ** bisacdf (replacing bbscdf)

 ** bisainv (replacing bbsinv)

 ** bisapdf (replacing bbspdf)

 ** bisarnd (replacing bbsrnd)

 ** cauchycdf (replacing cauchy_cdf)

 ** cauchyinv (replacing cauchy_inv)

 ** cauchypdf (replacing cauchy_pdf)

 ** cauchyrnd (replacing cauchy_rnd)
